# chip-8-emulator

./: Cargo.toml  README.md
.github/worflows/: deploy.yaml
.github/workflows/: deploy.yaml
chip8/: Cargo.toml
chip8/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/web/: index.html  index.js  wasm.js  wasm_bg.wasm
