[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
chip8 = { version = "0.1.0", path = "../chip8" }
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ImageData",
  "KeyboardEvent",
  "Window",
] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
[lib]
crate-type = ["cdylib"]
